...
import SwiftUI

// MARK: - Categories -

/// Extends String to define user interface accessibility identifier
private extension String {
    static let feedSearchIdentifier = "FeedSearchIdentifier"
    static let feedListIdentifier = "FeedListIdentifier"
    static let feedListCellIdentifier = "FeedListCellIdentifier"
}

/// Extends String to define media key
private extension String {
    static let kMedia = "m"
...
